Bug 403478 - Discover does not find all available Flatpak updates
Summary: Discover does not find all available Flatpak updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 406744 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-21 22:24 UTC by Patrick Silva
Modified: 2019-04-30 00:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments
screenshot (141.81 KB, image/png)
2019-01-21 22:24 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-01-21 22:24:11 UTC
Created attachment 117603 [details]
screenshot

See the screenshot taken on neon dev unstable please.
Discover only shows 1 update available while command line finds update to 3 apps installed via flatpak. Discover did not find all updates even after I click "Check for updates" button.


SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.2
Comment 1 Aleix Pol 2019-04-29 15:45:32 UTC
*** Bug 406744 has been marked as a duplicate of this bug. ***
Comment 2 Aleix Pol 2019-04-29 16:52:59 UTC
Git commit 67d858dd422728e8928d9488ca887bd04f7b899a by Aleix Pol.
Committed on 29/04/2019 at 16:52.
Pushed by apol into branch 'master'.

flatpak: also load runtimes at start

M  +11   -7    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp

https://commits.kde.org/discover/67d858dd422728e8928d9488ca887bd04f7b899a
Comment 3 Aleix Pol 2019-04-30 00:18:08 UTC
Git commit fcdf9401ebef3693fec5fa7646b5f2644c23832c by Aleix Pol.
Committed on 30/04/2019 at 00:17.
Pushed by apol into branch 'master'.

flatpak: also load runtimes at start

M  +14   -7    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp

https://commits.kde.org/discover/fcdf9401ebef3693fec5fa7646b5f2644c23832c