flatpak: also load runtimes at start

BUG: 403478